--- a/ShareFile/Properties/launchSettings.json
+++ b/ShareFile/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     },
     "ShareFile": {
       "commandName": "Project",
+      "commandLineArgs": "--urls http://*:5000",
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
